# social

./: .gitignore  pyproject.toml
src/: config.py  database.py  dependencies.py  exceptions.py  exceptions_handlers.py  main.py
src/tweets/: __init__.py  dependencies.py  models.py  router.py  schemas.py  services.py
